# s7tya-diary-2024

./: .env.example  Cargo.toml
.github/workflows/: pages.yml
site/: .gitignore  _config.ts  _data.toml  deno.json  index.tsx  main.ts  styles.css
site/_components/: Activity.tsx  Head.tsx  Header.tsx  PostCard.tsx  PostList.tsx
site/_includes/: base.tsx  collection.tsx  layout.tsx  post.tsx
site/posts/: _data.toml
site/static/: main.js  styles.css
site/tags/: index.tsx
src/: main.rs
