[package]
name = "s7tya-diary-2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
chrono = "0.4.35"
chrono-tz = "0.8.6"
dotenvy = "0.15.7"
regex = "1.10.3"
reqwest = { version = "0.11.26", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sha2 = "0.10.8"
